Fix Panama JDK 21 compat and add null guards to log helpers
- Use allocateUtf8String (JDK 21 preview) instead of allocateFrom
  (JDK 22+) in PanamaNativeBinding log methods
- Add null guard for typeName in logDecodedRecv/logDecodedSend to
  prevent NPE if sessionTypeName returns null for unknown type IDs
- Log exceptions in message log helpers to stderr instead of silently
  swallowing them

https://claude.ai/code/session_014AfDzbM9g2cEUn1Pah1N57